k8s/db/41-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  clusterIP: None
  ports:
    - port:  5432
